syntax = "proto3";
package cometbft.privval.v2;

import "cometbft/privval/v1/types.proto";

import "cometbft/types/v3/types.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/cometbft/cometbft/api/cometbft/privval/v2";

// SignVoteRequest is a request to sign a vote
message SignVoteRequest {
  cometbft.types.v3.Vote  vote     = 1;
  string                  chain_id = 2;
}

// SignedVoteResponse is a response containing a signed vote or an error
message SignedVoteResponse {
  cometbft.types.v3.Vote  vote  = 1 [(gogoproto.nullable) = false];
  v1.RemoteSignerError       error = 2;
}

message Message {
  oneof sum {
    v1.PubKeyRequest          pub_key_request          = 1;
    v1.PubKeyResponse         pub_key_response         = 2;
    SignVoteRequest           sign_vote_request        = 3;
    SignedVoteResponse        signed_vote_response     = 4;
    v1.SignProposalRequest    sign_proposal_request    = 5;
    v1.SignedProposalResponse signed_proposal_response = 6;
    v1.PingRequest            ping_request             = 7;
    v1.PingResponse           ping_response            = 8;
  }
}
